<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hoteles"
    android:background="@color/lightskyblue">



    <TextView
        android:id="@+id/Turismo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/Turismo"
        app:layout_constraintVertical_bias="0.07"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp"/>


    <ImageView
        android:id="@+id/auroras"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/tromsonorthernlightstour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Turismo"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/ResenaT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Auroras"
        app:layout_constraintTop_toBottomOf="@id/auroras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.08"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <ImageView
        android:id="@+id/Vistas"
        android:layout_width="348dp"
        android:layout_height="153dp"
        android:src="@drawable/vistasdesdeelmirador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ResenaT"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/ResenaV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Perspectiva"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Vistas" />


</androidx.constraintlayout.widget.ConstraintLayout>