<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@color/lightskyblue">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="154dp"
        android:layout_height="145dp"
        android:src="@drawable/cabana"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="TROMSØ"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30dp"
        app:layout_constraintVertical_bias="0.09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/botonhoteles"
        android:backgroundTint="@color/royalblue"
        android:text="@string/Hoteles"
        android:layout_marginHorizontal="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="@color/white"
        android:textSize="17dp"
        />

    <Button
        android:id="@+id/botonrestaurantes"
        android:backgroundTint="@color/royalblue"
        android:text="@string/Restaurantes"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/botonhoteles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:textSize="17dp"/>

    <Button
        android:id="@+id/botonsitios"
        android:backgroundTint="@color/royalblue"
        android:text="@string/Turismo"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/botonrestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:textSize="17dp"/>

    <TextView
        android:id="@+id/bienvenida"
        app:layout_constraintTop_toBottomOf="@id/botonsitios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Bienvenido"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintVertical_bias="0.09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/Usuario"
        app:layout_constraintTop_toBottomOf="@id/bienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Cliente"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintVertical_bias="0.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>






</androidx.constraintlayout.widget.ConstraintLayout>



